--- a/Online Sales Management System/Areas/Admin/Views/Employees/Index.cshtml
+++ b/Online Sales Management System/Areas/Admin/Views/Employees/Index.cshtml
@@ -1,6 +1,5 @@
-﻿@model List<OnlineSalesManagementSystem.Domain.Entities.Employee>
+@model List<OnlineSalesManagementSystem.Domain.Entities.Employee>
 @using Microsoft.AspNetCore.Authorization
-@using OnlineSalesManagementSystem.Services.Security
 @using OnlineSalesManagementSystem.Services.Security
 @inject IAuthorizationService AuthorizationService
 @{
@@ -165,3 +164,4 @@
         return $"/Admin/Employees?q={Uri.EscapeDataString(q)}&page={page}&pageSize={pageSize}";
     }
 }
+ 
